tenzir/bats/data/reference/from_to/test_from_failure/step_00.ref
error: unsupported scheme `unknown`
 --> <input>:1:7
  |
1 | from "unknown://example.org"
  |       ^^^^^^^ 
  |
  = note: supported schemes for deduction: `elasticsearch`, `file`, `ftp`, `ftps`, `http`, `https`, `opensearch`, `tcp`, `udp`
  = docs: https://docs.tenzir.com/reference/operators/from